Reverted ES translation changes

--- a/src/i18n/locales/es-US/translations.json
+++ b/src/i18n/locales/es-US/translations.json
@@ -45,12 +45,12 @@
   "business_signup.create_your_account": "CREAR SU CUENTA",
 
   "home.sign_up_btn": "REGISTRATE",
-  "home.zip_it": "Mandame <br />un Zipp!",
-  "home.personal_sign_up": "registrate personal",
-  "home.business_banking": "registrate coorporativo",
-  "home.business_banking_desc": "Un poco mas de dinero. Muchos mas poder",
-  "home.question_1": "Quieres mas de tu dinero?",
-  "home.question_2": "Como logramos hacerlo tan barato?",
+  "home.zip_it": "MANDAME UN ZIPP",
+  "home.personal_sign_up": "REGISTRATE PERSONAL",
+  "home.business_banking": "REGISTRATE COORPORATIVO",
+  "home.business_banking_desc": "UN POCO MAS DE DINERO. MUCHOS MAS PODER",
+  "home.question_1": "QUIERES MAS DE TU DINERO?",
+  "home.question_2": "COMO LOGRAMOS HACERLO TAN BARATO",
   "home.question_3": "NUESTRO NOMBRE NO ES SOLO POR SHOW",
   "home.answer_1": "SI, CLARO QUE PUEDES! HAY UNA MEJOR MANERA. QUEREMOS FACILITARTE QUE PUEDAS HACER CON TU DINERO LO QUE DE VERDAD QUIERES HACER: GANALO, MANTENLO, USALO CON TANTA FACILIDAD Y SEGURIDAD COMO QUIERES - ADEMAS TE RECOMPENSAMOS POR ELLO. PORQUE? PORQUE ES TU DINERO Y DEBERIAS TENER OPCIONES. CON ZIPPY LAS TIENES TODAS",
   "home.answer_2": "SOMOS CREYENTES QUE LOS SERVICIOS FINANCIEROS DEBERIAN SER UN GANAR GANAR. NOSTROS TOMAMOS MENOS DE TU DINERO SIMPLEMENTE PORQUE NUESTRAS TASAS NO NECESITAN SER TAN ALTAS. ES ASI DE SIMPLE",
