--- a/src/i18n/locales/es-US/translations.json
+++ b/src/i18n/locales/es-US/translations.json
@@ -2,8 +2,8 @@
   "header.language": "IDIOMA",
   "header.login": "LOGIN",
   "header.about": "Acerca de Nosotros",
-  "header.personal": "PERSONAL",
-  "header.business": "COORPORATIVA",
+  "header.personal": "personal",
+  "header.business": "coorporativa",
   "header.personal_profile": "NEEDS_LOC",
   
   "about.who_is": "QUIENES SOMOS",
@@ -24,15 +24,15 @@
   "business.business_description_2": "La apertura de cuentas bancarias internacionales puede sonar desafiante, pero con Zippy nosotros te entregamos todo lo que necesitas para comenzar a manejar tus cuentas en el exterior en minutos. ¿Como puede ser tan fácil? Gracias a las excelentes relaciones que tenemos con las marcas financieras internacionales y soluciones tecnológicas que sirven como un conector eficiente con la prioridad en la simpleza, la velocidad y la seguridad.",
   "business.business_description_3": "Cancelar sus facturas, planilla e incluso enviar dinero ahora es mas fácil con Zippy. Nosotros siempre te ofrecemos las tasas mas bajas por tus transacciones y lo asemos sencillo. (hasta nos atrevemos a decir divertido) el manejar tus pagos.<br />Obtén más información acá.",
   "business.business_title": "Banca Corporativa",
-  "business.sign_up": "REGISTRATE",
-  "business.first_name": "NOMBRE",
-  "business.last_name": "APELLIDO",
-  "business.email": "CORREO ELECTRONICO",
-  "business.password": "CONTRASEÑA",
-  "business.confirm_password": "CONFIRMAR CONTRASEÑA",
-  "business.agree_title": "ACEPTA LOS TERMINOS Y CONDICIONES",
+  "business.sign_up": "Registrate",
+  "business.first_name": "Nombre",
+  "business.last_name": "Apellido",
+  "business.email": "Correo electronico",
+  "business.password": "Contraseña",
+  "business.confirm_password": "Confirmar contraseña",
+  "business.agree_title": "Acepta los terminos y condiciones",
   "business.create_your_account": "Crear su cuenta",
-  "business.personal_banking": "Banca Personal",
+  "business.personal_banking": "banca personal",
 
   "business_signup.business_title": "banca corporativa",
   "business_signup.sign_up": "Registrate",
