--- a/src/i18n/locales/es-US/translations.json
+++ b/src/i18n/locales/es-US/translations.json
@@ -1,7 +1,7 @@
 {
   "header.language": "IDIOMA",
   "header.login": "LOGIN",
-  "header.about": "Acerca de Nosotros",
+  "header.about": "acerca de nosotros",
   "header.personal": "personal",
   "header.business": "coorporativa",
   "header.personal_profile": "NEEDS_LOC",
