--- a/src/i18n/locales/en-US/translations.json
+++ b/src/i18n/locales/en-US/translations.json
@@ -1,7 +1,7 @@
 {
   "header.language": "LANGUAGE",
   "header.login": "LOGIN",
-  "header.about": "about Us",
+  "header.about": "about us",
   "header.personal": "personal",
   "header.business": "business",
   "header.personal_profile": "dev docs",
