--- a/src/i18n/locales/es-US/translations.json
+++ b/src/i18n/locales/es-US/translations.json
@@ -6,7 +6,7 @@
   "header.business": "coorporativa",
   "header.personal_profile": "NEEDS_LOC",
   
-  "about.who_is": "QUIENES SOMOS",
+  "about.who_is": "quienes somos",
   "about.who_is_description_1": "Somos Geeks financieros que conocen el sistema. Y creemos que es demasiado complicado, costoso y difícil. Simplemente porque siempre haya sido así no significa que no podamos hacerlo mejor. Somos apasionados acerca de trabajar el sistema para lograr hacerlos gratificante para todos. Hemos creado Zippy Cash para cumplir con esa promesa.",
   "about.who_is_description_2": "En un mundo perfecto, la trasparencia y bajos costos deberían ser accesibles a todo el mundo, independientemente de quien sea. Pero… se necesita un titulo en derecho para entender la letra fina y, al final, los consumidores son los que terminan siendo estafados, en especial aquellos que tienen menos recursos. Zyppy Cash existe para romper esas cadenas y permitir hacer tus pagos de manera sencilla, rápida y segura para todos sus usuarios.",
   "about.the_team": "Nuestro Equipo",
