--- a/src/i18n/locales/en-US/translations.json
+++ b/src/i18n/locales/en-US/translations.json
@@ -6,7 +6,7 @@
   "header.business": "business",
   "header.personal_profile": "dev docs",
 
-  "about.who_is": "WHO IS",
+  "about.who_is": "who is",
   "about.who_is_description_1": "We're finance geeks who know the system. And we think it's too complicated, too expensive and too difficult. Just because it's always been that way doesn't mean we can't do better. We're passionate about working the system to make it rewarding for everyone. We created Zippy Cash to deliver on that promise.",
   "about.who_is_description_2": "In a fair world, transparent and affordable financial services would be accessible to all, regardless of who they are. But… you need a law degree to understand the fine print and in the end, consumers end up getting ripped off - especially those who have less. Zippy Cash exists to break these chains and make easy, fast, secure payments a reality for anyone who wants them!",
   "about.the_team": "THE TEAM",
