--- a/src/i18n/locales/en-US/translations.json
+++ b/src/i18n/locales/en-US/translations.json
@@ -1,6 +1,7 @@
 {
   "header.language": "LANGUAGE",
   "header.login": "LOGIN",
+  "header.logout": "LOGOUT",
   "header.about": "about us",
   "header.personal": "personal",
   "header.business": "business",
