--- a/src/i18n/locales/es-US/translations.json
+++ b/src/i18n/locales/es-US/translations.json
@@ -1,6 +1,7 @@
 {
   "header.language": "IDIOMA",
   "header.login": "LOGIN",
+  "header.logout": "NEEDS_LOC",
   "header.about": "acerca de nosotros",
   "header.personal": "personal",
   "header.business": "coorporativa",
