--- a/src/i18n/locales/fr-CA/translations.json
+++ b/src/i18n/locales/fr-CA/translations.json
@@ -1,29 +1,29 @@
 {
-  "header.language": "NEEDS_LOC",
-  "header.login": "NEEDS_LOC",
-  "header.about": "NEEDS_LOC",
-  "header.personal": "NEEDS_LOC",
-  "header.business": "NEEDS_LOC",
+  "header.language": "Langue",
+  "header.login": "Connexion",
+  "header.about": "À PROPOS DE NOUS",
+  "header.personal": "PERSONNEL",
+  "header.business": "PROFESSIONNEL",
   "header.personal_profile": "NEEDS_LOC",
   
-  "about.who_is": "NEEDS_LOC",
-  "about.who_is_description_1": "NEEDS_LOC",
-  "about.who_is_description_2": "NEEDS_LOC",
-  "about.the_team": "NEEDS_LOC",
-  "about.the_team_description": "NEEDS_LOC",
-  "about.our_mission": "NEEDS_LOC",
-  "about.our_mission_description": "NEEDS_LOC",
-  "about.our_values": "NEEDS_LOC",
-  "about.our_values_description": "NEEDS_LOC",
-  "about.our_partner": "NEEDS_LOC",
-  "about.our_partner_description": "NEEDS_LOC",
+  "about.who_is": "Qui est Zippy Cash?",
+  "about.who_is_description_1": "Nous sommes des geeks de finances qui connaissent le système et qui le trouvent trop compliqué, trop cher et trop rigide. Ce n’est pas parce qu’il a été construit ainsi que nous ne pouvons pas faire mieux. Nous veillons à l’améliorer pour que chacun puisse en bénéficier. Nous avons fondé Zippy Cash pour respecter cette promesse.",
+  "about.who_is_description_2": "Dans un monde équitable, nous aurions tous accès à des services financiers abordables et justes, peu importe notre statut. Mais nous avons besoin d’un diplôme en droit pour comprendre les petits caractères d’un contrat. Surtout qu’en fin de compte, ce sont souvent les clients les plus démunis qui finissent par en payer la note. Zippy Cash a vu le jour pour briser les chaînes et faciliter, accélérer et sécuriser les paiements pour tous ceux et celles qui le veulent!",
+  "about.the_team": "NOTRE ÉQUIPE",
+  "about.the_team_description": "Nous sommes des geeks de finances et de la technologie qui valorisent grandement la liberté de choix rendue possible grâce à l’univers numérique. Nous aimons les penseurs novateurs et les surdoués en informatique, donc si vous vous reconnaissez, consultez les offres d’emploi chez Zippy Cash ici. ",
+  "about.our_mission": "NOTRE MISSION",
+  "about.our_mission_description": "Notre mission est d’uniformiser les règles du jeu et de récompenser notre clientèle pour leurs actions quotidiennes, aussi petites soient-elles. Grâce à un savoir-faire, à des ententes établies ainsi qu’à une technologie de pointe, nous sommes en mesure d’optimiser votre argent avec facilité, rapidité, sécurité... et plaisir! Ça, c’est Zippy!",
+  "about.our_values": "NOS VALEURS",
+  "about.our_values_description": "Nous croyons que nos clients méritent une sécurité et une transparence optimales. Nous croyons à la liberté de choix pour tous, peu importe la grosseur de votre portefeuille. Nous visons à récompenser nos clients tous les jours, car nous savons qu’un peu plus d’argent peut leur donner un plus grand pouvoir. Et il est temps que ce pouvoir soit accessible à tous.  ",
+  "about.our_partner": "NOS PARTENAIRES",
+  "about.our_partner_description": "Nous travaillons de concert avec les organismes gouvernementaux et les partenaires de l’industrie financière pour nous assurer d’offrir la crème de la crème. Voyez qui est sur notre liste.",
 
-  "business.header_desc": "NEEDS_LOC",
-  "business.sign_up_btn_title": "NEEDS_LOC",
-  "business.business_description_1": "NEEDS_LOC",
-  "business.business_description_2": "NEEDS_LOC",
-  "business.business_description_3": "NEEDS_LOC",
-  "business.business_title": "NEEDS_LOC",
+  "business.header_desc": "Gérez votre argent à votre façon",
+  "business.sign_up_btn_title": "Ouvrir un compte professionnel ",
+  "business.business_description_1": "Peu importe la grandeur de votre entreprise, on la retrouve sur le marché mondial comme toutes les entreprises. C’est pourquoi vous avez besoin des meilleurs tarifs et des frais les plus bas possible pour votre marque et Zippy Cash vous les offre en tout temps. Il simplifie le commerce international. Nos frais sont imbattables, point.  ",
+  "business.business_description_2": "Il peut sembler intimidant de créer des comptes bancaires internationaux, mais avec Zippy, vous recevrez tout ce dont vous avez besoin pour commencer à gérer des comptes à l’international, en quelques minutes. Comment est-ce aussi simple? Nous avons établi d’excellents partenariats avec des marques financières internationales et des solutions technologiques qui servent de médiateurs efficaces privilégiant la facilité, la rapidité et la sécurité.",
+  "business.business_description_3": "Zippy englobe tout : la facturation, l’équipe et les gens. Nous vous donnons toujours les frais de transaction les plus bas et nous vous facilitons la vie (voire la pigmentons?) en ce qui concerne la gestion de vos paiements. Renseignez-vous ici.",
+  "business.business_title": "Zippy Cash Professionnel",
   "business.sign_up": "NEEDS_LOC",
   "business.first_name": "NEEDS_LOC",
   "business.last_name": "NEEDS_LOC",
@@ -44,34 +44,34 @@
   "business_signup.agree_title": "NEEDS_LOC",
   "business_signup.create_your_account": "NEEDS_LOC",
 
-  "home.sign_up_btn": "NEEDS_LOC",
-  "home.zip_it": "NEEDS_LOC",
-  "home.personal_sign_up": "NEEDS_LOC",
-  "home.business_banking": "NEEDS_LOC",
-  "home.business_banking_desc": "NEEDS_LOC",
-  "home.question_1": "NEEDS_LOC",
-  "home.question_2": "NEEDS_LOC",
-  "home.question_3": "NEEDS_LOC",
-  "home.answer_1": "NEEDS_LOC",
-  "home.answer_2": "NEEDS_LOC",
-  "home.answer_3": "NEEDS_LOC",
+  "home.sign_up_btn": "Ouvrez-moi un compte!",
+  "home.zip_it": "J’opte pour Zippy!",
+  "home.personal_sign_up": "Ouvrez-moi un compte!",
+  "home.business_banking": "Activité bancaire professionnelle ",
+  "home.business_banking_desc": "Un peu plus d’argent, beaucoup plus de pouvoir.",
+  "home.question_1": "Vous voulez en avoir plus pour votre argent?",
+  "home.question_2": "Comment faisons-nous pour offrir un service si abordable?",
+  "home.question_3": "Notre nom est bien plus que de la poudre aux yeux.",
+  "home.answer_1": "Oui, c’est possible! Et encore plus qu’avant. Nous vous offrons la possibilité de faire tout ce que vous voulez avec votre argent : la gagner, la conserver, la transférer, l’économiser, l’utiliser comme bon vous semble, en toute sécurité. En plus, vous obtiendrez des récompenses! Pourquoi? Parce qu’il s’agit de votre argent et vous méritez d’avoir le choix. Et vous l'avez avec Zippy.",
+  "home.answer_2": "Nous croyons que les services financiers doivent être une formule gagnante pour tous. Oui, vous en avez plus dans vos poches parce que les frais n’ont pas à être si élevés, tout simplement.",
+  "home.answer_3": "Zippy, c’est vite. Vite comme l’éclair. Presque immédiat, peu importe le pays. Nous avons doublé la vitesse et la sécurité de notre service pour veiller à ce que votre argent aille où et quand vous le voulez, sans anicroche. Après tout, vous avez beaucoup à faire, donc foncez! ",
   "home.image_alt_1": "NEEDS_LOC",
   "home.image_alt_2": "NEEDS_LOC",
   "home.image_alt_3": "NEEDS_LOC",
-  "home.personal_banking": "NEEDS_LOC",
+  "home.personal_banking": "Activité bancaire personnelle",
   
-  "personal.header_title": "NEEDS_LOC",
-  "personal.sign_up_btn": "NEEDS_LOC",
-  "personal.send_description": "NEEDS_LOC",
-  "personal.spend_description": "NEEDS_LOC",
-  "personal.funzpoints": "NEEDS_LOC",
-  "personal.funzpoints_description": "NEEDS_LOC",
-  "personal.image_alt_1": "NEEDS_LOC",
-  "personal.image_alt_2": "NEEDS_LOC",
-  "personal.image_alt_3": "NEEDS_LOC",
-  "personal.send_btn": "NEEDS_LOC",
-  "personal.spend_btn": "NEEDS_LOC",
-  "personal.personal_banking": "NEEDS_LOC",
+  "personal.header_title": "C’est possible avec Zippy",
+  "personal.sign_up_btn": "Ouvrir un compte personnel",
+  "personal.send_description": "Nous parions que vous vous demandez s’il est possible d’envoyer de l’argent à l’international sans dépenser une fortune. Oui, c’est possible! Ou si vous pouviez lier votre compte Zippy à votre carte de débit et de crédit pour centraliser les dépenses? Oui, c’est possible! Ou si vous pouviez le lier au compte de mon amie Erica pour les commandes qu’elle passe pendant ces longues soirées d’études? OUI, C’EST POSSIBLE. Vous n’avez qu’à prononcer Zipp et tout est réglé! ",
+  "personal.spend_description": "Je sais ce que vous pensez. Vous voulez magasiner à l’étranger pour économiser de l’argent. Vous voulez voir toutes vos dépenses à un seul endroit, au même moment. Vous voulez obtenir les frais les plus bas possible lorsque vous utilisez Zippy Cash. À ceci, nous vous répondons : oui, oui et toujours oui. C’est la force de la pensée positive (et d’une plateforme [hub] qui permet de centraliser les meilleurs systèmes financiers et d’élargir vos options selon vos besoins, en quelques secondes. Eh oui, c’est comme ça que Zipp opère. ",
+  "personal.funzpoints": "SYSTÈME FUNZPOINTS",
+  "personal.funzpoints_description": "Nous aimons vous en donner plus. Funzpoints est notre plateforme de jeu social qui vous récompense en vous offrant la chance de gagner de grands prix chaque jour. Jouez gratuitement et gagnez de vrais dollars qui iront directement dans vos poches. C’est tellement plaisant de dire « voilà, un petit surplus! » ",
+  "personal.image_alt_1": "ENVOYER",
+  "personal.image_alt_2": "DÉPENSER",
+  "personal.image_alt_3": "SYSTÈME FUNZPOINTS",
+  "personal.send_btn": "ENVOYER",
+  "personal.spend_btn": "DÉPENSER",
+  "personal.personal_banking": "Zippy Cash Personnel",
 
   "profile.profile_name": "NEEDS_LOC",
   "profile.contact_info": "NEEDS_LOC",
