updated personal and business page with latest design

--- a/src/i18n/locales/es-US/translations.json
+++ b/src/i18n/locales/es-US/translations.json
@@ -23,6 +23,20 @@
   "business.business_description_2": "La apertura de cuentas bancarias internacionales puede sonar desafiante, pero con Zippy nosotros te entregamos todo lo que necesitas para comenzar a manejar tus cuentas en el exterior en minutos. ¿Como puede ser tan fácil? Gracias a las excelentes relaciones que tenemos con las marcas financieras internacionales y soluciones tecnológicas que sirven como un conector eficiente con la prioridad en la simpleza, la velocidad y la seguridad.",
   "business.business_description_3": "Cancelar sus facturas, planilla e incluso enviar dinero ahora es mas fácil con Zippy. Nosotros siempre te ofrecemos las tasas mas bajas por tus transacciones y lo asemos sencillo. (hasta nos atrevemos a decir divertido) el manejar tus pagos.<br />Obtén más información acá.",
   "business.business_title": "Banca Corporativa",
+  "business.how_can_help": "NEEDS_LOC",
+  "business.integrate_payment": "NEEDS_LOC",
+  "business.integrate_payment_desc": "NEEDS_LOC",
+  "business.send_and_accept_money": "NEEDS_LOC",
+  "business.send_and_accept_money_desc": "NEEDS_LOC",
+  "business.make_payment": "NEEDS_LOC",
+  "business.make_payment_desc": "NEEDS_LOC",
+  "business.signup_free": "NEEDS_LOC",
+  "business.signup_here": "NEEDS_LOC",
+  "business.send_text_email": "NEEDS_LOC",
+  "business.choose_works": "NEEDS_LOC",
+  "business.link_download": "NEEDS_LOC",
+  "business.link_download_desc": "NEEDS_LOC",
+  "business.open_and_start": "NEEDS_LOC",
 
   "business_signup.business_title": "banca corporativa",
   "business_signup.sign_up": "Registrate",
@@ -62,6 +76,23 @@
   "personal.send_btn": "ENVIAR",
   "personal.spend_btn": "GASTAR",
   "personal.personal_banking": "banca personal",
+  "personal.personal_title": "NEEDS_LOC",
+  "personal.personal_desc": "NEEDS_LOC",
+  "personal.personal_sub_title1": "NEEDS_LOC",
+  "personal.personal_sub_desc_1": "NEEDS_LOC",
+  "personal.personal_sub_desc_2": "NEEDS_LOC",
+  "personal.personal_sub_desc_3": "NEEDS_LOC",
+  "personal.personal_sub_title2": "NEEDS_LOC",
+  "personal.personal_sub_desc_4": "NEEDS_LOC",
+  "personal.personal_sub_desc_5": "NEEDS_LOC",
+  "personal.signup_free": "NEEDS_LOC",
+  "personal.no_need_back": "NEEDS_LOC",
+  "personal.signup_here": "NEEDS_LOC",
+  "personal.send_text_email": "NEEDS_LOC",
+  "personal.choose_works": "NEEDS_LOC",
+  "personal.link_download": "NEEDS_LOC",
+  "personal.link_download_desc": "NEEDS_LOC",
+  "personal.open_and_start": "NEEDS_LOC",
 
   "profile.profile_name": "Nombre de Perfil",
   "profile.contact_info": "Informacion de contacto",
