--- a/src/i18n/locales/fr-CA/translations.json
+++ b/src/i18n/locales/fr-CA/translations.json
@@ -23,6 +23,20 @@
   "business.business_description_2": "Il peut sembler intimidant de créer des comptes bancaires internationaux, mais avec Zippy, vous recevrez tout ce dont vous avez besoin pour commencer à gérer des comptes à l’international, en quelques minutes. Comment est-ce aussi simple? Nous avons établi d’excellents partenariats avec des marques financières internationales et des solutions technologiques qui servent de médiateurs efficaces privilégiant la facilité, la rapidité et la sécurité.",
   "business.business_description_3": "Zippy englobe tout : la facturation, l’équipe et les gens. Nous vous donnons toujours les frais de transaction les plus bas et nous vous facilitons la vie (voire la pigmentons?) en ce qui concerne la gestion de vos paiements. Renseignez-vous ici.",
   "business.business_title": "Zippy Cash Professionnel",
+  "business.how_can_help": "Comment Zippy peut-il aider mon entreprise?",
+  "business.integrate_payment": "Intégrer des systèmes de paiement",
+  "business.integrate_payment_desc": "Grâce à Zippy, vous pouvez tout mettre au même endroit pour faciliter la comptabilité et la gestion financière de votre entreprise.",
+  "business.send_and_accept_money": "Envoyer et accepter de l’argent",
+  "business.send_and_accept_money_desc": "Envoyer de l’argent à l’étranger par Zippy n’a jamais été aussi facile, abordable et rapide. Avec ou sans compte bancaire, vous pouvez payer vos fournisseurs et envoyer des factures à vos clients. ",
+  "business.make_payment": "Convertir des paiements en source de revenus",
+  "business.make_payment_desc": "Nous offrons à vos clients la possibilité de recevoir un paiement immédiat de points de 0,99 cent ou d’attendre avant de le recevoir sans frais. Lorsque vos clients optent pour un paiement rapide en effectuant une transaction au sein de votre entreprise, vous en recevez aussi une partie. Cela dit, ces paiements ne vous coûteront rien et ils peuvent devenir une source passive de revenus. ",
+  "business.signup_free": "Ouvrir un compte sans frais",
+  "business.signup_here": "Ouvrez un <br />compte ici",
+  "business.send_text_email": "Attendez de recevoir le lien que nous vous<br /> enverrons par texto ou par courriel",
+  "business.choose_works": "(selon votre<br /> préférence)",
+  "business.link_download": "Cliquez sur le lien pour<br /> télécharger l’application",
+  "business.link_download_desc": "Zippy est offert sur plus de<br /> 400 appareils intelligents",
+  "business.open_and_start": "Ouvrez l’application<br /> et démarrez avec<br /> Zippy!",
 
   "business_signup.business_title": "NEEDS_LOC",
   "business_signup.sign_up": "NEEDS_LOC",
@@ -62,6 +76,23 @@
   "personal.send_btn": "ENVOYER",
   "personal.spend_btn": "DÉPENSER",
   "personal.personal_banking": "Zippy Cash Personnel",
+  "personal.personal_title": "Comment fonctionne Zippy?",
+  "personal.personal_desc": "Votre inscription à Zippy est gratuite. Vous n’aurez aucuns frais ou tarifs cachés ni de mauvaises surprises de notre part. Nous vous donnerons toujours les taux et les frais les plus bas possible et nous vous offrirons un remboursement pour faire affaire avec nous en utilisant les Funzpoints, les programmes de récompenses et les remises différées pour chaque transaction envoyée par Zippy. ",
+  "personal.personal_sub_title1": "Demander et envoyer de l’argent (sans frais!)",
+  "personal.personal_sub_desc_1": "Accédez à votre compte, cliquez sur un contact et envoyez-lui ou demandez-lui de l’argent. ",
+  "personal.personal_sub_desc_2": "Facile, rapide et gratuit. Le tout est envoyé en quelques secondes, peu importe le pays. ",
+  "personal.personal_sub_desc_3": "Nous vous offrons les meilleurs tarifs ainsi que les frais les plus bas qui soient… et ce, à la vitesse de l’éclair (en temps réel)! ",
+  "personal.personal_sub_title2": "Payer une facture (sans frais!)",
+  "personal.personal_sub_desc_4": "Accédez à votre compte et ajoutez une facture ",
+  "personal.personal_sub_desc_5": "Payez vos factures dans l’immédiat, sans frais, n’importe où, n’importe quand! ",
+  "personal.signup_free": "uvrir un compte sans frais",
+  "personal.no_need_back": "(aucun compte bancaire requis)",
+  "personal.signup_here": "Ouvrez un <br />compte ici",
+  "personal.send_text_email": "Attendez de recevoir le lien que nous vous<br /> enverrons par texto ou par courriel",
+  "personal.choose_works": "(selon votre<br /> préférence)",
+  "personal.link_download": "Cliquez sur le lien pour<br /> télécharger l’application",
+  "personal.link_download_desc": "Zippy est offert sur plus de<br /> 400 appareils intelligents",
+  "personal.open_and_start": "Ouvrez l’application<br /> et démarrez avec<br /> Zippy!",
 
   "profile.profile_name": "NEEDS_LOC",
   "profile.contact_info": "NEEDS_LOC",
