--- a/src/i18n/locales/en-US/translations.json
+++ b/src/i18n/locales/en-US/translations.json
@@ -23,6 +23,20 @@
   "business.business_description_2": "Setting up international bank accounts may sound daunting but with Zippy we deliver everything you need to start managing accounts abroad in minutes. How is it this easy? We have excellent partnerships with international financial brands, tech solutions that serve as an efficient connector, prioritizing ease, speed and security.",
   "business.business_description_3": "Paying invoices, people and employees just got zippier. We always give you the lowest transaction fees and make it easy (dare we say even fun?) to manage your payments.<br />Find out more here.",
   "business.business_title": "business banking",
+  "business.how_can_help": "How can Zippy help my business?",
+  "business.integrate_payment": "Integrate Payment Systems",
+  "business.integrate_payment_desc": "With Zippy, you can put everything in one place for easier accounting and financial management.",
+  "business.send_and_accept_money": "Send and Accept Money",
+  "business.send_and_accept_money_desc": "Paying cross border is easier, cheaper and faster with Zippy. With or without a bank account, you can pay vendors and charge customers.",
+  "business.make_payment": "Make Payments a Revenue Stream",
+  "business.make_payment_desc": "We offer consumers a 99 cent instant payout of points, or they can wait to get them for free. When consumers choose the faster payout when making a payment at your business, your business get a little bit back. That means payments won&apos;t cost you and can become a passive revenue stream.",
+  "business.signup_free": "Sign up free!",
+  "business.signup_here": "Sign up<br />here",
+  "business.send_text_email": "We will send you a<br /> link via text or email",
+  "business.choose_works": "(you choose which<br /> works for you)",
+  "business.link_download": "Click the link to<br /> download the app",
+  "business.link_download_desc": "Zippy is available on over<br /> 400 smart devices",
+  "business.open_and_start": "Open the app<br /> and start <br /> Zipping!",
 
   "business_signup.business_title": "business banking",
   "business_signup.sign_up": "Sign Up",
@@ -62,6 +76,23 @@
   "personal.send_btn": "SEND",
   "personal.spend_btn": "SPEND",
   "personal.personal_banking": "personal banking",
+  "personal.personal_title": "How does Zippy work?",
+  "personal.personal_desc": "There is no fee to sign up for Zippy. We will never surprise you with hidden fees or rates. We will always give you the lowest rate and lowest fee - and we will give you money back for zipping with us through funzpoints, referral rewards and cash back for every transaction you send through Zippy.",
+  "personal.personal_sub_title1": "Request and send money (for free!)",
+  "personal.personal_sub_desc_1": "Login to your acount, tap your contact and send them money or a request for money.",
+  "personal.personal_sub_desc_2": "Easy, fast, free and issent within seconds",
+  "personal.personal_sub_desc_3": "Send across borders with the best rates, lowest fees and super Zippt speed (in real time!)",
+  "personal.personal_sub_title2": "Pay bills (for free!)",
+  "personal.personal_sub_desc_4": "Login to your account and add a bill.",
+  "personal.personal_sub_desc_5": "Pay bills instantly, anytime, anywhere, with no fee!",
+  "personal.signup_free": "Sign up free!",
+  "personal.no_need_back": "(no back account needed)",
+  "personal.signup_here": "Sign up<br />here",
+  "personal.send_text_email": "We will send you a<br /> link via text or email",
+  "personal.choose_works": "(you choose which<br /> works for you)",
+  "personal.link_download": "Click the link to<br /> download the app",
+  "personal.link_download_desc": "Zippy is available on over<br /> 400 smart devices",
+  "personal.open_and_start": "Open the app<br /> and start <br /> Zipping!",
 
   "profile.profile_name": "Profile Name",
   "profile.contact_info": "Contact Info",
