--- a/src/i18n/locales/en-US/translations.json
+++ b/src/i18n/locales/en-US/translations.json
@@ -29,7 +29,7 @@
   "business.send_and_accept_money": "Send and Accept Money",
   "business.send_and_accept_money_desc": "Paying cross border is easier, cheaper and faster with Zippy. With or without a bank account, you can pay vendors and charge customers.",
   "business.make_payment": "Make Payments a Revenue Stream",
-  "business.make_payment_desc": "We offer consumers a 99 cent instant payout of points, or they can wait to get them for free. When consumers choose the faster payout when making a payment at your business, your business get a little bit back. That means payments won&apos;t cost you and can become a passive revenue stream.",
+  "business.make_payment_desc": "We offer consumers a 99 cent instant payout of points, or they can wait to get them for free. When consumers choose the faster payout when making a payment at your business, your business get a little bit back. That means payments won't cost you and can become a passive revenue stream.",
   "business.signup_free": "Sign up free!",
   "business.signup_here": "Sign up<br />here",
   "business.send_text_email": "We will send you a<br /> link via text or email",
