added es-US localization file

--- a/src/i18n/locales/es-US/translations.json
+++ b/src/i18n/locales/es-US/translations.json
@@ -23,20 +23,20 @@
   "business.business_description_2": "La apertura de cuentas bancarias internacionales puede sonar desafiante, pero con Zippy nosotros te entregamos todo lo que necesitas para comenzar a manejar tus cuentas en el exterior en minutos. ¿Como puede ser tan fácil? Gracias a las excelentes relaciones que tenemos con las marcas financieras internacionales y soluciones tecnológicas que sirven como un conector eficiente con la prioridad en la simpleza, la velocidad y la seguridad.",
   "business.business_description_3": "Cancelar sus facturas, planilla e incluso enviar dinero ahora es mas fácil con Zippy. Nosotros siempre te ofrecemos las tasas mas bajas por tus transacciones y lo asemos sencillo. (hasta nos atrevemos a decir divertido) el manejar tus pagos.<br />Obtén más información acá.",
   "business.business_title": "Banca Corporativa",
-  "business.how_can_help": "NEEDS_LOC",
-  "business.integrate_payment": "NEEDS_LOC",
-  "business.integrate_payment_desc": "NEEDS_LOC",
-  "business.send_and_accept_money": "NEEDS_LOC",
-  "business.send_and_accept_money_desc": "NEEDS_LOC",
-  "business.make_payment": "NEEDS_LOC",
-  "business.make_payment_desc": "NEEDS_LOC",
-  "business.signup_free": "NEEDS_LOC",
-  "business.signup_here": "NEEDS_LOC",
-  "business.send_text_email": "NEEDS_LOC",
-  "business.choose_works": "NEEDS_LOC",
-  "business.link_download": "NEEDS_LOC",
-  "business.link_download_desc": "NEEDS_LOC",
-  "business.open_and_start": "NEEDS_LOC",
+  "business.how_can_help": "Como puede Zippy ayudar mi negocio",
+  "business.integrate_payment": "Sistemas de pago integrados",
+  "business.integrate_payment_desc": "Con Zippy puedes tener todo en un mismo lugar, lo que permite un manejo de tu contabilidad y finanzas mucho mas sencillo",
+  "business.send_and_accept_money": "Envia y Acepta Dinero",
+  "business.send_and_accept_money_desc": "Pagar internationalmente es mas sencillo, economico y rapido con Zippy. Ya sea que cuentes o no con una cuenta bancaria, podras pagar a tus proveedores asi como facturar a tus clientes",
+  "business.make_payment": "Has de tus pagos un ingreso",
+  "business.make_payment_desc": "Nosotros ofrecemos a nuestros clientes un pago instantáneo de 99 centavos de puntos, o pueden esperar a recibirlos de gratis. Cuando nos clientes escojen el pago más rapido en tu negocio, tu negocio recibe un poco de vuelta. Eso significa que pagos won&apos;t te cuestan pero pueden convertirse un fuente de ingreso pasiva ",
+  "business.signup_free": "Registrate Gratis!",
+  "business.signup_here": "Registrate<br />here",
+  "business.send_text_email": "Nosotros te enviamos un<br /> link via mensaje de texto or correo electrónico",
+  "business.choose_works": "(Tu seleccionas cual<br /> funciona para ti)",
+  "business.link_download": "Dale Click al link <br /> para descargar la aplicación",
+  "business.link_download_desc": "Zippy esta disponible en mas de<br /> 400 dispositivios inteligentes",
+  "business.open_and_start": "Abre el App<br /> y comienza <br /> Zipping!",
 
   "business_signup.business_title": "banca corporativa",
   "business_signup.sign_up": "Registrate",
@@ -76,23 +76,23 @@
   "personal.send_btn": "ENVIAR",
   "personal.spend_btn": "GASTAR",
   "personal.personal_banking": "banca personal",
-  "personal.personal_title": "NEEDS_LOC",
-  "personal.personal_desc": "NEEDS_LOC",
-  "personal.personal_sub_title1": "NEEDS_LOC",
-  "personal.personal_sub_desc_1": "NEEDS_LOC",
-  "personal.personal_sub_desc_2": "NEEDS_LOC",
-  "personal.personal_sub_desc_3": "NEEDS_LOC",
-  "personal.personal_sub_title2": "NEEDS_LOC",
-  "personal.personal_sub_desc_4": "NEEDS_LOC",
-  "personal.personal_sub_desc_5": "NEEDS_LOC",
-  "personal.signup_free": "NEEDS_LOC",
-  "personal.no_need_back": "NEEDS_LOC",
-  "personal.signup_here": "NEEDS_LOC",
-  "personal.send_text_email": "NEEDS_LOC",
-  "personal.choose_works": "NEEDS_LOC",
-  "personal.link_download": "NEEDS_LOC",
-  "personal.link_download_desc": "NEEDS_LOC",
-  "personal.open_and_start": "NEEDS_LOC",
+  "personal.personal_title": "Como funciona Zippy",
+  "personal.personal_desc": "No hay ningun costo para registrarte con Zippy. Nostros nunca te sorprenderiamos con costos ocultos o tasas. Siempre te daremos el las tasas y costos mas bajos - ademas te devolvemos dinero por usar Zipp a travez de funzpoints, referidos y cash back por cada transacción que envies por Zippy",
+  "personal.personal_sub_title1": "Solicita y Envia Dinero (Gratis!)",
+  "personal.personal_sub_desc_1": "Accesa tu cuenta, dale tap a tus contactos y envia o solicita dinero",
+  "personal.personal_sub_desc_2": "Fácil, rapido, gratis y todo en segundos",
+  "personal.personal_sub_desc_3": "Envios internacionales con las mejores tasas, los costos mas bajos y a velocidad Zippy (Inmediato!)",
+  "personal.personal_sub_title2": "Cancela tus Cuentas (Gratis!)",
+  "personal.personal_sub_desc_4": "Accesa tu cuenta y agrega facturas",
+  "personal.personal_sub_desc_5": "Cancela facturas instantaneamente, de cualquier lugar y sin costo!",
+  "personal.signup_free": "Registrate Gratis!",
+  "personal.no_need_back": "(sin necesidad de una cuenta bancaria",
+  "personal.signup_here": "Registrate<br />aqui",
+  "personal.send_text_email": "Nosotros te enviamos un<br /> link via mensaje de texto or correo electrónico",
+  "personal.choose_works": "(Tu seleccionas cual<br /> funciona para ti)",
+  "personal.link_download": "Dale Click al link <br /> para descargar la aplicación",
+  "personal.link_download_desc": "Zippy esta disponible en mas de<br /> 400 dispositivios inteligentes",
+  "personal.open_and_start": "Abre el App<br /> y comienza <br /> Zipping",
 
   "profile.profile_name": "Nombre de Perfil",
   "profile.contact_info": "Informacion de contacto",
