text format issue fixed

--- a/src/i18n/locales/es-US/translations.json
+++ b/src/i18n/locales/es-US/translations.json
@@ -29,7 +29,7 @@
   "business.send_and_accept_money": "Envia y Acepta Dinero",
   "business.send_and_accept_money_desc": "Pagar internationalmente es mas sencillo, economico y rapido con Zippy. Ya sea que cuentes o no con una cuenta bancaria, podras pagar a tus proveedores asi como facturar a tus clientes",
   "business.make_payment": "Has de tus pagos un ingreso",
-  "business.make_payment_desc": "Nosotros ofrecemos a nuestros clientes un pago instantáneo de 99 centavos de puntos, o pueden esperar a recibirlos de gratis. Cuando nos clientes escojen el pago más rapido en tu negocio, tu negocio recibe un poco de vuelta. Eso significa que pagos won&apos;t te cuestan pero pueden convertirse un fuente de ingreso pasiva ",
+  "business.make_payment_desc": "Nosotros ofrecemos a nuestros clientes un pago instantáneo de 99 centavos de puntos, o pueden esperar a recibirlos de gratis. Cuando nos clientes escojen el pago más rapido en tu negocio, tu negocio recibe un poco de vuelta. Eso significa que pagos won't te cuestan pero pueden convertirse un fuente de ingreso pasiva ",
   "business.signup_free": "Registrate Gratis!",
   "business.signup_here": "Registrate<br />here",
   "business.send_text_email": "Nosotros te enviamos un<br /> link via mensaje de texto or correo electrónico",
