--- a/src/i18n/locales/fr-CA/translations.json
+++ b/src/i18n/locales/fr-CA/translations.json
@@ -1,4 +1,5 @@
 {
+  "header.accounts": "NEEDS_LOC",
   "header.language": "Langue",
   "header.login": "Connexion",
   "header.logout": "NEEDS_LOC",
