Fixed some style issue and localization issue

--- a/src/i18n/locales/fr-CA/translations.json
+++ b/src/i18n/locales/fr-CA/translations.json
@@ -75,7 +75,7 @@
   "personal.image_alt_3": "SYSTÈME FUNZPOINTS",
   "personal.send_btn": "ENVOYER",
   "personal.spend_btn": "DÉPENSER",
-  "personal.personal_banking": "Zippy Cash Personnel",
+  "personal.personal_banking": "zippy cash personnel",
   "personal.personal_title": "Comment fonctionne Zippy?",
   "personal.personal_desc": "Votre inscription à Zippy est gratuite. Vous n’aurez aucuns frais ou tarifs cachés ni de mauvaises surprises de notre part. Nous vous donnerons toujours les taux et les frais les plus bas possible et nous vous offrirons un remboursement pour faire affaire avec nous en utilisant les Funzpoints, les programmes de récompenses et les remises différées pour chaque transaction envoyée par Zippy. ",
   "personal.personal_sub_title1": "Demander et envoyer de l’argent (sans frais!)",
